<resources>
    <string name="app_name">Adopte un Prof</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Email invalide</string>
    <string name="invalid_password">Le mot de passe doit faire plus de 5 caractères</string>
    <string name="login_failed">"Connexion échouée"</string>
    <string name="ask_for_register">Pas de compte? Inscrivez-vous ici</string>
    <string name="register_button">Inscription</string>
    <string name="title_activity_register">register_activity</string>
    <string name="inscription_register_valid">Inscription</string>
    <string name="password_confirmation">Confirmation du mot de passe</string>
    <string name="nom_d_utilisateur_register">Nom d\'utilisateur</string>
    <string name="back_to_login">Retour</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>